src/style.css
/*
dark
#264653
#2a9d8f
#e9c46a
#f4a261
#e76f51
medium
#227c9d
#17c3b2
#ffcb77
#fef9ef 
#fe6d73
light
#ffa69e
#faf3dd
#b8f2e6
#aed9e0
#5e6472
 --------------------- */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
}
/* 
.app-container {
  width: 100vw;
  height: 100vh;
} */

body {
  background-color: #faf3dd;
}

/* ---------------------Home------------------ */

.home-container {
  width: 100vw;
  height: 100vh;
  background-image: linear-gradient(
      to right bottom,
      rgba(67, 67, 67, 0.7),
      rgba(67, 67, 67, 0.7)
    ),
    url(https://res.cloudinary.com/deiacifoni/image/upload/v1665709045/fruits/background2_cdk4fs.jpg);
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.home-rules-btn {
  font-size: 1.2rem;
  font-weight: bold;
  color: #faf3dd;
  background-color: #227c9d;
  border: 2px solid #264653;
  border-radius: 0.3rem;
  width: 6rem;
  padding: 0.6rem 1rem;
  margin: 4rem 8rem 0 auto;
}

.home-rules-btn:hover {
  background-color: #2a9d8f;
}

.home-rules {
  position: relative;
  /* right: 500px; */
  display: none;
}

.home-title {
  width: 100%;
  font-size: 4rem;
  text-align: center;
  justify-self: center;
  /* padding-top: 2rem; */
  color: #fef9ef;
}

.home-btn-container {
  width: 100%;
  height: 60%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.home-btn-box {
  width: 25%;
  height: 15%;
  font-size: 2rem;
  font-weight: bold;
  padding: 0.5rem 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 4px solid #264653;
  border-radius: 0.8rem;
  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 8px 8px;
  background-color: #faf3dd;
}

.home-btn-box a {
  text-decoration: none;
  color: #264653;
}

@media screen and (max-width: 1120px) {
  .home-rules-btn {
    font-size: 1rem;
    width: 5rem;
    padding: 0.4rem 0.8rem;
    margin: 4rem 6rem 0 auto;
  }

  .home-title {
    font-size: 3.8rem;
  }

  .home-btn-box {
    width: 35%;
    font-size: 1.8rem;
  }
}

@media screen and (max-width: 770px) {
  .home-rules-btn {
    font-size: 0.8rem;
    margin: 3rem 2.5rem 0 auto;
  }

  .home-title {
    font-size: 3.2rem;
  }

  .home-btn-box {
    width: 45%;
    font-size: 1.6rem;
  }
}

@media screen and (max-width: 500px) {
  .home-rules-btn {
    font-size: 0.8rem;
    margin: 2rem 2rem 0 auto;
  }

  .home-title {
    font-size: 3rem;
  }

  .home-btn-box {
    width: 55%;
    font-size: 1.6rem;
  }
}

/* ---------------------Rules------------------ */
.rules-container {
  width: 22rem;
  color: #264653;
  padding: 1rem;
  border: 2px solid #227c9d;
  border-radius: 0 0 0.5rem 0.5rem;
}

.rules-title {
  font-size: 1.6rem;
}

.rules-subtitle {
  font-size: 1.2rem;
  color: #227c9d;
}

.rules-text {
  font-size: 0.9rem;
  margin: 0.5rem;
}

/* ---------------------Footer------------------ */

.footer-container {
  padding: 0.6rem 0;
  background-color: #669fa8;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  color: #264653;

  justify-items: center;
  align-items: center;
}

.footer-title {
  font-weight: bold;
}

.footer-text {
  font-size: 1.2rem;
}

.footer-social-links {
  font-size: 1.8rem;
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 6rem;
}

.footer-link {
  color: #264653;
}

.footer-social-icon {
  display: inline-block;
}

@media screen and (max-width: 1120px) {
  .footer-social-links {
    gap: 4rem;
    font-size: 1.6rem;
  }
}

@media screen and (max-width: 770px) {
  .footer-title {
    font-size: 1.6rem;
  }

  .footer-text {
    font-size: 1rem;
    font-weight: bold;
  }

  .footer-social-links {
    gap: 2.5rem;
    font-size: 1.4rem;
  }
}

@media screen and (max-width: 650px) {
  .footer-container {
    grid-template-columns: 1fr 2fr 1fr;
  }

  .footer-title {
    font-size: 1rem;
  }

  .footer-text {
    font-size: 0.9rem;
    font-weight: bold;
  }

  .footer-social-links {
    gap: 1.5rem;
    font-size: 1.2rem;
  }
}

/* ---------------------GamePageNavBar------------------ */

.gamePageNav-container {
  width: 100%;
  height: 5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 3rem;
  background-color: #17c3b2;
  color: #264653;
}

.gamePageNav-menu-container {
  display: flex;
  align-items: center;
}

.gamePageNav-title {
  font-size: 2rem;
  font-weight: bold;
}

.gamePageNav-items {
  display: flex;
  gap: 1.5rem;
}

.gamePageNav-item {
  font-size: 1.5rem;
  font-weight: bold;
  text-decoration: none;
  padding: 0.5rem 0.8rem;
  background-color: #b8f2e6;
  color: #264653;
  border-radius: 0.4rem;
  border: none;
}

.gamePageNav-icon {
  width: 2.2rem;
  color: #faf3dd;
  visibility: hidden;
}

@media screen and (max-width: 750px) {
  .gamePageNav-icon-container {
    position: relative;
    left: 6rem;
  }

  .gamePageNav-title {
    font-size: 1.8rem;
  }

  .gamePageNav-icon {
    visibility: visible;
  }

  .gamePageNav-items {
    display: flex;
    flex-direction: column;
    position: relative;
    top: 83px;
    right: 750px;
    gap: 0;
    transform: all 0.5s ease;
  }

  .gamePageNav-item {
    font-size: 1.2rem;
  }

  .gamePageNav-items-cell {
    position: relative;
    top: 99px;
    left: 20px;
    gap: 0;
    transform: all 0.5s ease;
    border-radius: 0;
  }
}

/* ---------------------GameApp & Game------------------ */

.gameapp-container {
  width: 100%;
  height: 100vh;
  background-color: #faf3dd;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.game-container {
  display: flex;
  flex-direction: column;
}

/* ---------------------Board------------------ */

.board-container {
  height: 50%;
  margin-top: 3rem;
  display: grid;
  justify-content: center;
}

.board-level1 {
  grid-row: 1 / 15;
  grid-column: 1 / 15;
  /* z-index: 0; */
}

.board-level2 {
  grid-row: 2 / 16;
  grid-column: 2 / 16;
  /* z-index: 5; */
}

.board-level3 {
  grid-row: 1 / 15;
  grid-column: 1 / 15;
  /* z-index: 10; */
  /* pointer-events: none; */
}

.click-through {
  pointer-events: none;
}

/* ---------------------BottomHolderBar------------------ */
.bottomHolderBar-container {
  width: 520px;
  height: 70px;
  padding: 4px 15px;
  margin: 20px auto 0 auto;
  border: 2px solid #227c9d;
  border-radius: 0.3rem;
  display: flex;
  align-items: center;
  margin-bottom: 5rem;
}

/* ---------------------Tile------------------ */

.tileLevel2-position {
  position: relative;
  left: 35px;
  top: -180px;
}
.tileLevel3-position {
  position: relative;
  top: -422px;
}

/*try something  overflow: hidden; to adjust tile (sobreposto ta mostrando o de baixo)*/
.tile {
  width: 60px;
  height: 60px;
  margin: 0.1rem 0.2rem;
  border: 2px solid #227c9d;
  border-radius: 0.3rem;
  box-shadow: rgba(0, 0, 0, 0.4) 3px 3px 4px;
  pointer-events: auto;
}

.tile-null {
  width: 60px;
  height: 60px;
  margin: 0.1rem 0.2rem;
  border: 2px solid #227c9d;
  visibility: hidden;
  pointer-events: none;
}

@media screen and (max-width: 770px) {
  .tile {
    width: 8vw;
    height: 8vw;
    margin: 0 0.1rem;
  }

  .tile-null {
    width: 8vw;
    height: 8vw;
    margin: 0 0.1rem;
  }

  .bottomHolderBar-container {
    width: 65vw;
    height: 10vw;
    padding: 4px 2px;
  }
}

/* ---------------------Win LOse Card------------------ */

.card-container {
  width: 28rem;
  height: 16rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem;
  margin: 10rem auto;
  color: #264653;
  border: 3px solid #227c9d;
  border-radius: 2rem;
  box-shadow: rgba(0, 0, 0, 0.4) 3px 3px 4px;
}

.card-winner {
  background-color: #b8f2e6;
}

.card-gameover {
  background-color: #ffa69e;
}

.card-title {
  margin: 1rem auto 2.5rem auto;
  font-size: 3rem;
}

.card-btn {
  text-decoration: none;
  font-size: 1.4rem;
  font-weight: bold;
  padding: 0.6rem;
  margin: 1rem 1.8rem;
  color: #227c9d;
  background-color: #faf3dd;
  border: 2px solid #227c9d;
  border-radius: 0.8rem;
  box-shadow: rgba(0, 0, 0, 0.4) 3px 3px 4px;
}

@media screen and (max-width: 900px) {
  .card-container {
    width: 24rem;
    height: 14rem;
    padding: 1.8rem;
    margin: 8rem auto;
    border-radius: 1.6rem;
  }
  .card-title {
    margin: 0.8rem auto 1.8rem auto;
    font-size: 2.8rem;
  }
  .card-btn {
    font-size: 1.2rem;
    padding: 0.6rem;
    margin: 0.8rem 1.5rem;
    border-radius: 0.6rem;
  }
}

@media screen and (max-width: 650px) {
  .card-container {
    width: 20rem;
    height: 12rem;
    margin: 4rem auto;
    padding: 1.8rem;
    border-radius: 1.2rem;
  }
  .card-title {
    font-size: 2rem;
    margin: 0.4rem auto 0.6em auto;
  }
  .card-btn {
    font-size: 1rem;
    padding: 0.6rem;
    margin: 0.5rem 1rem;
    border-radius: 0.4rem;
  }
}

@media screen and (max-width: 470px) {
  .card-container {
    width: 15rem;
    height: 8rem;
    margin: 2rem auto;
    padding: 1rem;
    border-radius: 0.8rem;
  }
  .card-title {
    font-size: 1.5rem;
    margin: 0.2rem auto 0.6em auto;
  }
  .card-btn {
    font-size: 0.8rem;
    padding: 0.4rem;
    margin: 0.2rem 0.6rem;
    border-radius: 0.3rem;
  }
}

